<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.stockscout.presentation.ui.splash.SplashFragment"
        android:label="Splash"
        tools:layout="@layout/fragment_splash">

        <action
            android:id="@+id/action_splash_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.stockscout.presentation.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_home_to_scanner"
            app:destination="@id/scannerFragment" />

        <action
            android:id="@+id/action_home_to_detail"
            app:destination="@id/itemDetailFragment" />

    </fragment>

    <fragment
        android:id="@+id/scannerFragment"
        android:name="com.example.stockscout.presentation.ui.scanner.ScannerFragment"
        android:label="@string/scan_barcode"
        tools:layout="@layout/fragment_scanner" />

    <fragment
        android:id="@+id/itemDetailFragment"
        android:name="com.example.stockscout.presentation.ui.detail.ItemDetailFragment"
        android:label="@string/detail_title"
        tools:layout="@layout/fragment_detail">

        <argument
            android:name="input"
            app:argType="string" />

    </fragment>

</navigation>
